se agrego el WS de agregar obra en Access y SQL Server

--- a/web.config
+++ b/web.config
@@ -11,9 +11,11 @@
   <connectionStrings>
     <add name="fidocConnectionString" connectionString="Data Source=TS_SINFO21;Initial Catalog=fidoc;Integrated Security=True" providerName="System.Data.SqlClient"/>
     <add name="cf" connectionString="Data Source=192.1.1.241;Initial Catalog=fidoc;user id=usrfidoc;password=pwdfidoc;"/>
-    <add name="cf25" connectionString="Data Source=192.1.1.24;Initial Catalog=pfidoc;user id=usr_fidoc_qa;password=&amp;8stl52u*hLp;"/>
+	  <!--add name="cf25" connectionString="Data Source=localhost;Initial Catalog=pfidoc;user id=LAPTOP-H7C62KR6\utileria6;password=1234;"/-->
+	<add name="cf25" connectionString="Data Source=192.1.1.24;Initial Catalog=pfidoc;user id=usr_fidoc_qa;password=&amp;8stl52u*hLp;"/>
     <add name="cf4" connectionString="Data Source=192.1.1.4;Initial Catalog=LCSDESUR2;user id=usr_fidoc;password=pwdfidoc;"/>
-    <add name="cf5" connectionString="Server=172.17.15.21;Port=5432;user id=usrfidoc;Password=Z8XacQ@eb-nA;Database=gisfidoc;CommandTimeout=10000;"/>
+	  <!--add name="cf5" connectionString="Server=localhost;Port=5432;user id=postgres;Password=root;Database=gisfidoc;CommandTimeout=10000;Search Path=public2;"/-->
+	<add name="cf5" connectionString="Server=172.17.15.21;Port=5432;user id=usrfidoc;Password=Z8XacQ@eb-nA;Database=gisfidoc;CommandTimeout=10000;"/>
     <add name="cf6" connectionString="Data Source=C:\Fidoc\obrasdb992007.accdb;Provider=Microsoft.ACE.OLEDB.12.0;Jet OLEDB:Database Password=LEONFIDOC;"/>
     <add name="fidocConnectionString1" connectionString="Data Source=192.1.126.123;Initial Catalog=fidoc;User ID=upFidoc;Password=?Fidoc2509$" providerName="System.Data.SqlClient"/>
   </connectionStrings>
@@ -41,7 +43,7 @@
     <httpHandlers>
       <add path="Reserved.ReportViewerWebControl.axd" verb="*" type="Microsoft.Reporting.WebForms.HttpHandler, Microsoft.ReportViewer.WebForms, Version=11.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91" validate="false"/>
     </httpHandlers>
-    <compilation debug="true" strict="false" explicit="true" targetFramework="4.5">
+    <compilation debug="true" strict="false" explicit="true" targetFramework="4.5" numRecompilesBeforeAppRestart="50" maxBatchSize="12000">
       <assemblies>
         <add assembly="System.Design, Version=4.0.0.0, Culture=neutral, PublicKeyToken=B03F5F7F11D50A3A"/>
         <add assembly="System.Web.Extensions.Design, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
